// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should apply switchDirection and direction props 1`] = `
<Flex
  className="some-class"
  direction="column"
  switchDirection="medium"
>
  <FlexItem
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </FlexItem>
  <FlexItem
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </FlexItem>
</Flex>
`;

exports[`RadioButtonGroup should match the snapshot 1`] = `
<Flex
  className="some-class"
  direction="row"
>
  <FlexItem
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </FlexItem>
  <FlexItem
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </FlexItem>
</Flex>
`;
